--- a/src/Styles/ServiceCards.css
+++ b/src/Styles/ServiceCards.css
@@ -90,7 +90,7 @@
   display: inline-block;
   width: 100%;
   height: 100%;
-  background-color: #00000000;
+  background-color: #a930bc00;
   /* margin-left: 2rem; */
   color: white;
   padding-left: 4rem;
